--- a/index.html
+++ b/index.html
@@ -45,106 +45,118 @@
     <div class="row02-container">
         <div class="title">
             DEPARTMENT OF SPACEMED
-            <div class="row"></div>
+            <hr>
         </div>
         <div class="details">
             SpaceMed terdiri <b>MainLeader</b> sebagai pusat pengelolaan SpaceMed diikuti oleh <b>Sekretaris Umum dan Bendahara Umum</b> SpaceMed, dan <b>4 Department</b> yang menjadi penggerak utama berjalannya SpaceMed antara lain : 
         </div>
-        <div class="co">
+        <div class="pi">
             <div class="card">
-                <div class="co-01">
-                    <img src="images/Pengurus/Dayuria.png" alt="">
+                <div class="bg">
+                    <div class="crop">
+                        <img src="images/Pengurus/Dayuria.png" alt="">
+                    </div>                    
+                </div>
+                <div class="desc">
+                    <h3>IDA AYU RIA W.</h3>
+                    <p>Mataram</p>
+                    <span>Kepala Departemen <br>Administrasi dan Sumber <br>Daya</span>
                 </div>
             </div>
             <div class="card">
-                <div class="co-02">
-                    <img src="images/Pengurus/akbar.png" alt="">
+                <div class="bg">
+                    <div class="crop">
+                        <img src="images/Pengurus/akbar.png" alt="">
+                    </div>
+                </div>
+                <div class="desc">
+                    <h3>AKBAR AHMAD</h3>
+                    <p>Kota Bima</p>
+                    <span>Kepala Departemen <br>Media dan Teknologi</span>
                 </div>
             </div>
             <div class="card">
-                <div class="co-03">
-                    <img src="images/Pengurus/gafur.png" alt="">
+                <div class="bg">
+                    <div class="crop">
+                        <img src="images/Pengurus/gafur.png" alt="">
+                    </div>
+                </div>
+                <div class="desc">
+                    <h3>ABDUL GHOFUR</h3>
+                    <p>Lombok Timur</p>
+                    <span>Kepala Departemen <br>Produksi dan Pengadaan</span>
                 </div>
             </div>
             <div class="card">
-                <div class="co-04">
-                    <img src="images/Pengurus/Bintang.png" alt="">
+                <div class="bg">
+                    <div class="crop">
+                        <img src="images/Pengurus/Bintang.png" alt="">
+                    </div>                    
                 </div>
-            </div>
-        </div>
-        <div class="name">
-            <div class="container">
-                <h3>IDA AYU RIA W.</h3>
-                <p>Mataram</p>
-                <span>Kepala Departemen Administrasi dan Sumber Daya</span>
-            </div>
-            <div class="container">
-                <h3>AKBAR AHMAD</h3>
-                <p>Kota Bima</p>
-                <span>Kepala Departemen <br>Media dan Teknologi</span>
-            </div>
-            <div class="container">
-                <h3>ABDUL GHOFUR</h3>
-                <p>Lombok Timur</p>
-                <span>Kepala Departemen <br>Produksi dan Pengadaan</span>
-            </div>
-            <div class="container">
-                <h3>BINTANG NURLAILI</h3>
-                <p>Sumbawa Besar</p>
-                <span>Kepala Departemen Marketing, Komunikasi, dan Informasi</span>
+                <div class="desc">
+                    <h3>BINTANG NURLAILI</h3>
+                    <p>Sumbawa Besar</p>
+                    <span>Kepala Departemen <br>Marketing, Komunikasi, <br>dan Informasi</span>
+                </div>
             </div>
         </div>
     </div>
     <div class="row03-container">
         <div class="title">
             DIVISION OF SPACEMED
-            <div class="row"></div>
+            <hr>
         </div>
         <div class="details">
             Devisi SpaceMed adalah bidang SpaceMed yang mengelola pengembangan skill dan keahlian, diaman Devisi SpaceMed ini berada di bawah tanggung jawab <b>Administrasi dan Sumberdaya Department</b>, berikut 4 Devisi SpaceMed : 
         </div>
         <div class="co">
             <div class="card">
-                <div class="co-01">
-                    <img src="images/tyas.png" alt="">
+                <div class="bg">
+                    <div class="crop">
+                        <img src="images/tyas.png" alt="">
+                    </div>
+                </div>
+                <div class="desc">
+                    <h3>AMIR LINDA TYAS H.</h3>
+                    <p>Lombok Timur</p>
+                    <span>Co-Devisi<br><b>Photography & Photo Editing</b></span>
                 </div>
             </div>
             <div class="card">
-                <div class="co-02">
-                    <img src="images/rifki.png" alt="">
+                <div class="bg">
+                    <div class="crop">
+                        <img src="images/rifki.png" alt="">
+                    </div>                    
+                </div>
+                <div class="desc">
+                    <h3>RIFKI BAFADAL</h3>
+                    <p>Sumbawa</p>
+                    <span>Co-Devisi<br><b>Design Graphic</b></span>
                 </div>
             </div>
             <div class="card">
-                <div class="co-03">
-                    <img src="images/fatihi.png" alt="">
+                <div class="bg">
+                    <div class="crop">
+                        <img src="images/fatihi.png" alt="">
+                    </div>
+                </div>
+                <div class="desc">
+                    <h3>KHAERUL FATIHI</h3>
+                    <p>Lombok Tengah</p>
+                    <span>Co-Devisi<br><b>Videography</b></span>
                 </div>
             </div>
             <div class="card">
-                <div class="co-04">
-                    <img src="images/vini.png" alt="">
+                <div class="bg">
+                    <div class="crop">
+                        <img src="images/vini.png" alt="">
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="name">
-            <div class="container">
-                <h3>AMIR LINDA TYAS H.</h3>
-                <p>Lombok Timur</p>
-                <span>Co-Devisi<br><b>Photography & Photo Editing</b></span>
-            </div>
-            <div class="container">
-                <h3>RIFKI BAFADAL</h3>
-                <p>Sumbawa</p>
-                <span>Co-Devisi<br><b>Design Graphic</b></span>
-            </div>
-            <div class="container">
-                <h3>KHAERUL FATIHI</h3>
-                <p>Lombok Tengah</p>
-                <span>Co-Devisi<br><b>Videography</b></span>
-            </div>
-            <div class="container">
-                <h3>VINI FEBRIA U. B.</h3>
-                <p>Lombok Barat</p>
-                <span>Co-Devisi<br><b>Web Development & Content Writing</b></span>
+                <div class="desc">
+                    <h3>VINI FEBRIA U. B.</h3>
+                    <p>Lombok Barat</p>
+                    <span>Co-Devisi<br><b>Web Development & Content <br> Writing</b></span>
+                </div>
             </div>
         </div>
     </div>
@@ -152,27 +164,15 @@
         <div class="title">INFORMATION</div>
     </div>
     <div class="row05-container">
-        <div class="row01">
-            <div class="shape">
-
-            </div>
-            <div class="shape">
-
-            </div>
-            <div class="shape">
-
-            </div>
+        <div class="row">
+            <div class="shape"></div>
+            <div class="shape"></div>
+            <div class="shape"></div>
         </div>
-        <div class="row02">
-            <div class="shape">
-
-            </div>
-            <div class="shape">
-
-            </div>
-            <div class="shape">
-
-            </div>
+        <div class="row">
+            <div class="shape"></div>
+            <div class="shape"></div>
+            <div class="shape"></div>
         </div>
     </div>
     <div class="row06-container">
@@ -333,11 +333,9 @@
         if(navbar.style.top != "0px"){
             navbar.style.top="0px";
             toggle.className="fas fa-times";
-            toggle.style.fontSize="30px"
         }else{
             navbar.style.top="-555px";
             toggle.className="fas fa-bars";
-            toggle.style.fontSize="25px"
         }        
     }
 </script>    
