--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <hr>
         </div>
         <div class="details">
-            Devisi SpaceMed adalah bidang SpaceMed yang mengelola pengembangan skill dan keahlian, diaman Devisi SpaceMed ini berada di bawah tanggung jawab <b>Administrasi dan Sumberdaya Department</b>, berikut 4 Devisi SpaceMed : 
+            Devisi SpaceMed adalah bidang SpaceMed yang mengelola pengembangan skill dan keahlian, dimana Devisi SpaceMed ini berada di bawah tanggung jawab <b>Administrasi dan Sumberdaya Department</b>, berikut 4 Devisi SpaceMed : 
         </div>
         <div class="co">
             <div class="card">
@@ -216,6 +216,7 @@
             <div class="product">
                 Product : <br>PDH/PDL, Kemeja, Kaos, Poloshirt, Jacket, Hoodie, Parka, Notebook, kemasan product&Makanan, dll
             </div>
+            <br>
             <div class="jasa">Jasa : <br>Logo, Poster,Flyer,Banner, Leaflet, Backdrop, Photobooth, Layout majalah, Photoshoot, Weding Photography, 
                 Food Photography, BirthdayPhoto, Video Promotion, Video Documentasi, Video Editing, Dll.</div>
         </div>
