--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <img src="images/logo-home.png" alt="">
             <div class="details">
-                SpaceMed adalah sebuah organisai Industri Kreative yang bergerak di bidang Multimedia Content Production, meliputi pengembangan skill Graphic Design, Photography, Photo Editing, Videography, Web Devlopment,dan Content Writing, Selain pengembangan juga bagaimana cara Monetizing Skill.  
+                SpaceMed adalah sebuah organisai Industri Kreative yang bergerak di bidang Multimedia Content Production, meliputi pengembangan skill Graphic Design, Photography,Videography, Web Devlopment,dan Content Writing, Selain pengembangan juga bagaimana cara Monetizing Skill.  
             </div>
             <div class="button">
                 <button>Find Out More</button>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="desc">
-                    <h3>AKBAR AHMAD</h3>
+                    <h3>AKBAR RAHMAD</h3>
                     <p>Kota Bima</p>
                     <span>Kepala Departemen <br>Media dan Teknologi</span>
                 </div>
@@ -129,7 +129,7 @@
                     </div>                    
                 </div>
                 <div class="desc">
-                    <h3>RIFKI BAFADAL</h3>
+                    <h3>RIFQI BAFADAL</h3>
                     <p>Sumbawa</p>
                     <span>Co-Devisi<br><b>Design Graphic</b></span>
                 </div>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="desc">
-                    <h3>KHAERUL FATIHI</h3>
+                    <h3>HAIRUL FATIHI</h3>
                     <p>Lombok Tengah</p>
                     <span>Co-Devisi<br><b>Videography</b></span>
                 </div>
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div class="desc">
-                    <h3>VINI FEBRIA U. B.</h3>
+                    <h3>BAIQ VINI FEBRIA U. B.</h3>
                     <p>Lombok Barat</p>
                     <span>Co-Devisi<br><b>Web Development & Content <br> Writing</b></span>
                 </div>
@@ -178,15 +178,14 @@
     <div class="row06-container">
         <div class="visi">
             <h3>VISI</h3>
-            Menjadi Pusat Multimedia Conten Production 
+            Menjadi Pusat Multimedia Content Production 
         </div>
         <div class="misi">
             <h3>MISI</h3>
                 1. Konsisten dalam Menyajikan Karya-Karya Yang Berkualitas, Inovatif, dan Inspiratif.<br>
                 2. Membantu Berbagai Kalangan Menciptakan  Branding yang Berdaya Saing.<br>
                 3. Menyediakan Media Promosi  yang Menarik, dengan pelayanan yang terbaik, cepat dan tepat.<br>
-                4. Menyediakan Media Pengembangan Skill di bidang Design Graphic, <br>
-                5. Photography, Videography, dan Web Devlopment.<br>
+                4. Menyediakan Media Pengembangan Skill di bidang Design Graphic,Photography, Videography, dan Web Devlopment.
         </div>
         <button>Contact Us</button>
     </div>
@@ -273,7 +272,7 @@
                                 <h3>Product FIve</h3>
                             </div>
                             <div class="content">
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At perspiciatis delectus eligendi quas quia culpa reprehenderit doloremque corporis. Ipsum quis velit tempore rem dolor id nihil soluta commodi, impedit veniam?</p>
+                                <p>Lorem ipsum dolor,sit amet consectetur adipisicing elit. At perspiciatis delectus eligendi quas quia culpa reprehenderit doloremque corporis. Ipsum quis velit tempore rem dolor id nihil soluta commodi, impedit veniam?</p>
                                 <a href="#">Read More</a>
                             </div>
                         </div>
@@ -287,8 +286,8 @@
     <div class="footer">
         <div class="content">
             <h3>CONTENT</h3>
-            <a href="#">Design Graphics</a>            
-            <a href="#">Photography</a>            
+            <a href="#">Graphic Design</a>            
+        <a href="#">Photography</a>            
             <a href="#">Videography</a>            
             <a href="#">Web Development</a>            
             <a href="#">Content Writing</a>            
